--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,7 @@
-@tailwind base;
-@tailwind components;
+@import "tailwindcss/preflight";
 @tailwind utilities;
+
+
+body {
+  font-family: 'Inter', sans-serif;
+}
