--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@
     @apply bg-gray-100 text-gray-800 font-sans m-10
   }
   button {
-    @apply  border py-1 px-4 bg-white rounded-md
+    @apply  border py-1 px-4 bg-white rounded-md w-auto flex-1 mt-3
   }
   th {
     @apply text-xs text-gray-400 border-b p-3 text-left
